# parsekit

./: Rakefile  parsekit.gemspec
.github/workflows/: ci.yml  release.yml
ext/parsekit/: Cargo.toml
ext/parsekit/src/: parser.rs
lib/: parsekit.rb
lib/parsekit/: version.rb
spec/parsekit/: pdf_parser_spec.rb
