[package]
name = "parsekit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "parsekit"

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
# Document parsing - testing embedded C libraries
# MuPDF builds from source and statically links
mupdf = { version = "0.8", default-features = false, features = [] }
# OCR - Using tesseract-rs for both system and bundled modes
tesseract-rs = "0.3"  # Tesseract with optional bundling
image = "0.25"  # Image processing library (match rusty-tesseract's version)
calamine = "0.36"  # Excel parsing
docx-rs = "0.4"  # Word document parsing
quick-xml = "0.41"  # XML parsing
zip = "8.2"  # ZIP archive handling for PPTX
serde_json = "1.0"  # JSON parsing
regex = "1.10"  # Text parsing
encoding_rs = "0.8"  # Encoding detection

[features]
default = ["bundled-tesseract"]
bundled-tesseract = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
